Lagt til nytt endepunkt finn-ytelser-for-orgnummer som er sikret med azure ad og tar inn orgnummer i request for å tillate interne applikasjoner å kalle tjenesten. Opprettet FinnYtelser modell for å skille på request og intern datamodell fordi det gir bedre tilpassningsmuligheter ved endring av kontrakt eksternt.
