# src/main/kotlin/no/nav/sokos/api/entitet/FinnYtelserForOrgnummerRequest.kt
@@ -1,0 +1,8 @@
+package no.nav.sokos.api.entitet
+
+class FinnYtelserForOrgnummerRequest (
+    val periode: Periode,
+    val mottakere  : List<String>,
+    val ytelseskoder: List<String>?,
+    val orgnummer: String
+)
