# src/main/resources/spec/ur-ekstern-api-v1-openapi-spec.yaml
@@ -12,7 +12,7 @@ paths:
     post:
       tags:
         - ur-ekstern.v1
-      summary: Finn ytelser (ekstern)
+      summary: Finn ytelser (Maskinporten sikkerhet)
       operationId: finn-ytelser
       parameters:
         - in: header
@@ -59,12 +59,90 @@ paths:
               schema:
                 type: string
                 example: 'Noe gikk galt'
+  /v1/finn-ytelser-for-orgnummer:
+    post:
+      tags:
+        - ur-ekstern.v1
+      summary: Finn ytelser for oppgitt organisasjonsnummer (Azure-AD sikkerhet)
+      operationId: finn-ytelser-for-orgnummer
+      parameters:
+        - in: header
+          name: x-correlation-id
+          required: true
+          schema:
+            type: string
+            description: Corrolation id
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/YtelseoppslagForOrgnummer'
+        required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Mottaker'
+                description: Liste over utbetalinger for den angitte id i den angitte
+                  periode.
+        401:
+          description: Uautorisert
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: 'Unauthorized'
+        403:
+          description: Tilgang nektet
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: 'Forbidden'
+        500:
+          description: Intern server feil
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: 'Noe gikk galt'
 components:
   schemas:
     Ytelseoppslag:
       required: [periode, mottakere]
       type: object
       properties:
+        periode:
+          $ref: '#/components/schemas/Periode'
+        ytelseskoder:
+          type: array
+          minItems: 1
+          items:
+            type: string
+            enum:
+              - AAP
+              - DAGPENGER
+          description: |
+            En liste med ytelsestyper som det skal søkes på. Dersom ingen er vedlagt får man alle man har tilgang på.
+        mottakere:
+          type: array
+          maxItems: 1000
+          items:
+            type: string
+          description: |
+            En liste med unike identer for mattaker av ytelser, f.eks fødselsnummer.
+    YtelseoppslagForOrgnummer:
+      required: [ orgnummer, periode, mottakere ]
+      type: object
+      properties:
+        orgnummer:
+          type: string
+          example: '889640782'
+          description: Organisasjonsnummer det gjøres oppslag for.
         periode:
           $ref: '#/components/schemas/Periode'
         ytelseskoder:
